# flowielytics

./: .gitignore  Cargo.toml  Readme.md  todos.md
assets/: index.html
src/: lcu.rs  lcu_client.rs  lcu_connector.rs  main.rs  statistics_providers.rs  templates.rs
src/lcu/: connector.rs  ingame.rs  models.rs  process_info_provider.rs  rest.rs  state.rs  state_distributor.rs  ws.rs
templates/: connected.html  index.html  not-connected.html  not-playing.html  playing.html
testing/: msg.json
