[package]
name = "lcu_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
sysinfo = "0.30.5"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
http = "1.1.0"
native-tls = "0.2.11"
base64 = "0.22.0"
serde_json = "1.0.114"
serde = {version = "1.0.197", features = ["derive"]}
askama = "0.12.1"
tower-http =  {version = "0.5.2", features = ["fs"]}
